# labs-libraryupgrader

./: .gitignore  .gitreview  Dockerfile  MANIFEST.in  Pipfile  README.md  alembic.ini  app.py  backports.list  build.sh  change_password.py  config.json.example  docker.py  dump-reqs.sh  gerrit.py  known_hosts  mw.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.py  tasks.py  thing.py  thing.sh  tox.ini  upgrade.py
.pipeline/: blubber.yaml  config.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 0105e6b69847_patch_to_mediumblob.py  112731f35bbd_make_the_version_column_longer.py  136ea9422629_add_upstreams_table.py  1684256728e6_switch_to_mediumblob.py  23223bb47663_add_repositories_table.py  34610d904101_add_advisories_table.py  36130068b5f9_added_manager_column.py  3ddcb00cd72a_add_monitoring_table.py  4f87a173a7d8_track_duration_of_logs.py  714526ec1c10_have_dependencies_use_a_fk_to_.py  7c071244ef8e_add_log_sha1.py  a2452f842414_make_dependencies_manager_non_nullable.py  b5aa142a6c62_add_repositories_git_branch.py  bcfc7c2a4100_store_hashtags_in_logs_table.py  c741b11964b3_added_dependencies_table.py  d068e96fb459_add_logs_table.py  ea4834de64e9_make_the_branch_column_longer.py  f0c31ad3074e_add_flag_fields_to_repositories.py
container/: ng.py  ng_test.py  phpcs.xml.sample  thing.py  thing_test.py
diff-libraries/: .dockerignore  Cargo.toml  Dockerfile
diff-libraries/migrations/2020-06-20-092327_create_diffs/: down.sql  up.sql
diff-libraries/src/: backend.rs  main.rs  models.rs  schema.rs  utils.rs  web.rs
diff-libraries/templates/: diff.html.tera  index.html.tera
etc/: libup-celery.service  libup-run.service  libup-run.timer  libup-web.service
files/: gitconfig  php72.list  timeout-wrapper.sh
libup/: __init__.py  collections.py  collections_test.py  config.py  data.py  db.py  docker.py  extract.py  files.py  files_test.py  gerrit.py  grunt.py  grunt_test.py  library.py  library_test.py  metadata.py  model.py  monitoring.py  mw.py  ng.py  ng_test.py  phab.py  plan.py  push.py  push_test.py  run.py  shell.py  shell_test.py  ssh.py  tasks.py  timeout-wrapper.sh  update.py  upgrade.py  utils.py  utils_test.py  web.py
libup/templates/: base.html  credits.html  errors.html  index.html  library.html  library_index.html  library_table.html  logs.html  logs2.html  macros.html  metrics.prom  r.html  r_index.html  status.html  vulns_composer.html  vulns_npm.html
libup/web/: __init__.py
libup/web/templates/: base.html  errors.html  index.html  library.html  library_index.html  library_table.html  logs2.html  r.html  r_index.html  status.html  vulns_composer.html  vulns_npm.html
runner/: pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
runner/runner/: __init__.py  files.py  grunt.py  httpplan.py  library.py  shell2.py  update.py
runner/tests/: collections_test.py  conftest.py  files_test.py  grunt_test.py  library_test.py  runner_test.py  shell2_test.py
runner/tests/fixtures/grunt/: Gruntfile.js  Gruntfile.js-no-jsonlint
runner/tests/fixtures/ng/: Gruntfile.js.expected
templates/: extension.html  index.html  sniff.html
tests/: collections_test.py  conftest.py  docker_test.py  extract_test.py  files_test.py  gerrit_test.py  grunt_test.py  library_test.py  metadata_test.py  model_test.py  monitoring_test.py  ng_test.py  plan_test.py  push_test.py  shell2_helper.py  shell2_test.py  shell_helper.py  shell_test.py  ssh_test.py  utils_test.py  web_templates_test.py  web_test.py
tests/fixtures/grunt/: Gruntfile.js  Gruntfile.js-no-jsonlint
tests/fixtures/ng/: Gruntfile.js.before  Gruntfile.js.expected
web/: app.py  library.py  library_test.py  libup-web.service
web/templates/: base.html  library.html  r.html  vulns_npm.html
