[tool.poetry]
name = "libup"
version = "0.1.0"
description = ""
authors = ["Kunal Mehta <legoktm@member.fsf.org>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
flask = "^1.1"
flask-bootstrap = "^3.3"
gunicorn = "^20.0"
markdown = "^3.1"
semver = "^2.9"
celery = "^4.4"
wikimediaci-utils = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-mock = "^2.0"
pytest-cov = "^2.8"
flake8 = "^3.7"

[tool.poetry.scripts]
libup-run = 'libup.run:main'
libup-ng = 'libup.ng:main'
libup-push = 'libup.push:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
