[tool.poetry]
name = "runner"
version = "0.1.0"
description = "libup runner component"
authors = ["Kunal Mehta <legoktm@debian.org>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "3.7.*"
requests = "*"
poetry-semver = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "*"
pytest-mock = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
